La til Surefire-plugin og JavaFX-Maven-plugin til pom.xml.