@@ -83,7 +83,7 @@
     <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
-        <version>2.8.5</version>
+        <version>2.9.0</version>
     </dependency>
 
     <!-- Dependency for å behandle java-->
@@ -113,10 +113,20 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
         </plugin>
+
+        <!-- Maven Surefire plugin -->
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
+          <version>3.0.0-M5</version>
+            <configuration>
+                <argLine>
+                --add-opens BikeRentalApp/BikeRentalApp=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                </argLine>
+            </configuration>
         </plugin>
+
+
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
@@ -138,6 +148,20 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+
+        <!-- Plugin for å kjøre app gjennom Maven med "mvn javafx:run" -->
+        <plugin>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-maven-plugin</artifactId>
+          <version>0.0.6</version>
+          <!-- Default configuration for running -->
+          <!-- Usage: mvn javafx:run -->
+          <configuration>
+              <mainClass>BikeRentalApp.App</mainClass>
+          </configuration>
+        </plugin>
+
+
       </plugins>
     </pluginManagement>
   </build>
